@@ -1,4 +1,4 @@
-#ident "$Id: mount_autofs.c,v 1.10 2004/11/15 14:42:47 raven Exp $"
+#ident "$Id: mount_autofs.c,v 1.11 2004/11/15 14:47:13 raven Exp $"
 /*
  * mount_autofs.c
  *
@@ -71,7 +71,7 @@ int mount_mount(const char *root, const char *name, int name_len,
 	debug(MODPREFIX "fullpath=%s what=%s options=%s",
 		  fullpath, what, options);
 
-	if (is_mounted(fullpath)) {
+	if (is_mounted(_PATH_MOUNTED, fullpath)) {
 		warn("BUG: about to mount over %s, continuing", fullpath);
 		return 0;
 	}
