@@ -13,6 +13,7 @@ xx/xx/2004 autofs-4.1.4
 - the map change detection patch
     - note this requires a kernel patch to work, see README.patches.
 - correct whitespace handling in maps.
+- mount table handling cleanup.
 
 19/05/2004 autofs-4.1.3
 -----------------------
